# SimpleServer

src/: CMakeLists.txt  bookstore_database.cc  main.cc
src/client/: CMakeLists.txt  client.cc  main.cc
src/client/header/: client.h
src/header/: bookstore_database.h  server.h
src/server/: CMakeLists.txt  add_to_cart_handler.cc  bookstore_database.cc  create_order_handler.cc  details_handler.cc  forward_handler.cc  login_handler.cc  main.cc  register_handler.cc  request_queue.cc  server.cc  session.cc
src/server/header/: add_to_cart_handler.h  bookstore_database.h  create_order_handler.h  details_handler.h  forward_handler.h  handlers_includer.h  login_handler.h  register_handler.h  request.h  request_handler_interaface.h  request_queue.h  server.h  session.h
